--- a/css/main.css
+++ b/css/main.css
@@ -290,21 +290,21 @@ a:hover {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 100;
 }
 #modal .content
 {
     left: 0;
     position: absolute;
     top: 0;
-    z-index: 10;
+    z-index: 101;
 }
 #modal .loader
 {
     left: 0;
     position: absolute;
     top: 0;
-    z-index: 10;
+    z-index: 101;
 }
 
 /* InfoMessage */
@@ -314,7 +314,7 @@ a:hover {
     position: fixed;
     top: 0;
     width: 500px;
-    z-index: 10;
+    z-index: 101;
 }
 #info-message .content {
     background-color: #F9EDBE;
@@ -326,4 +326,79 @@ a:hover {
     padding: 6px 10px;
     text-align: center;
     word-wrap: break-word;
+}
+
+/* Cover Picker */
+.cover-picker-wrap {
+    display: none;
+}
+.cover-picker {
+    background-color: #fff;
+    border: 1px solid #acacac;
+    overflow: auto;
+    -moz-box-shadow: rgba(0,0,0,.2) 0 4px 16px;
+    -webkit-box-shadow: rgba(0,0,0,.2) 0 4px 16px;
+    box-shadow: rgba(0,0,0,.2) 0 4px 16px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    width: 650px;
+}
+.cover-picker .header {
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 20px;
+    padding: 10px 15px;
+}
+.cover-picker .menu {
+    background-color: #fff;
+    border-right: 1px solid #e5e5e5;
+    float: left;
+    height: 350px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 200px;
+}
+.cover-picker .menu .item {
+    cursor: pointer;
+    display: block;
+    padding: 10px 10px 10px 15px;
+}
+.cover-picker .menu .item:hover {
+    background-color: #eee;
+}
+.cover-picker .menu .item.active {
+    border-left: #dd4b39 5px solid;
+    color: #cf4236;
+    font-weight: bold;
+}
+.cover-picker .cover-thumbnails {
+    height: 350px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 10px 0 0 10px;
+}
+.cover-thumbnails .thumbnail {
+    border: 1px solid #E2E2E2;
+    box-shadow: 0 0 5px #666666;
+    float: left;
+    margin: 10px 11px;
+    padding: 2px 2px;
+    opacity: 0.8;
+}
+.cover-thumbnails .thumbnail:hover {
+    border: 1px solid #666666;
+    cursor: pointer;
+    opacity: 1;
+}
+.cover-thumbnails .thumbnail.active {
+    border: 2px solid #4D90FE !important;
+    cursor: default !important;
+    padding: 1px 1px;
+    opacity: 1;
+}
+.cover-thumbnails .thumbnail img {
+    border: 0;
+    display: block;
+    height: 104px;
+    width: 185px;
 }
